added new configs

--- a/config/aobd.cfg
+++ b/config/aobd.cfg
@@ -100,6 +100,39 @@ Aluminium {
 }
 
 
+Aluminum {
+    B:"Disable All"=false
+    B:Eln=true
+    B:EnderIO=true
+    B:HydCraft=true
+    B:IC2=true
+    B:ImmersiveEngineering=true
+    B:Magneticraft=true
+    B:Mariculture=true
+    B:Mekanism=true
+    B:NetherOres=true
+    B:Railcraft=true
+    B:RotaryCraft=true
+    B:Steamcraft=true
+    B:TConstruct=true
+    B:Thaumcraft=true
+    B:ThermalExpansion=true
+    B:appliedenergistics2=true
+    B:aura=true
+    B:bcadditions=true
+    S:colour=0x9d9fa0
+    D:energy=1.0
+    B:eng_toolbox=true
+    B:exnihilo=true
+    S:extra=Aluminum
+    B:factorization=true
+    B:ganysnether=true
+    B:modularsystems=true
+    B:randomadditions=true
+    B:simpleoregrinder=true
+}
+
+
 Americium {
     B:"Disable All"=false
     B:EnderIO=true
@@ -402,20 +435,30 @@ Cobalt {
 
 Copper {
     B:"Disable All"=false
+    B:Eln=true
     B:EnderIO=true
     B:HydCraft=true
     B:IC2=true
+    B:ImmersiveEngineering=true
     S:"In game name"=Copper
+    B:Magneticraft=true
+    B:Mariculture=true
     B:Mekanism=true
     B:NetherOres=true
     B:Railcraft=true
+    B:RotaryCraft=true
+    B:Steamcraft=true
     B:TConstruct=true
     B:Thaumcraft=true
     B:ThermalExpansion=true
     B:UltraTech=true
     B:appliedenergistics2=true
+    B:aura=true
+    B:bcadditions=true
     S:colour=0xb9733e
     D:energy=1.0
+    B:eng_toolbox=true
+    B:exnihilo=true
     S:extra=Gold
     B:factorization=true
     B:ganysnether=true
@@ -503,6 +546,39 @@ Desh {
     S:colour=0x282828
     D:energy=1.0
     S:extra=Desh
+    B:factorization=true
+    B:ganysnether=true
+    B:modularsystems=true
+    B:randomadditions=true
+    B:simpleoregrinder=true
+}
+
+
+Draconium {
+    B:"Disable All"=false
+    B:Eln=true
+    B:EnderIO=true
+    B:HydCraft=true
+    B:IC2=true
+    B:ImmersiveEngineering=true
+    B:Magneticraft=true
+    B:Mariculture=true
+    B:Mekanism=true
+    B:NetherOres=true
+    B:Railcraft=true
+    B:RotaryCraft=true
+    B:Steamcraft=true
+    B:TConstruct=true
+    B:Thaumcraft=true
+    B:ThermalExpansion=true
+    B:appliedenergistics2=true
+    B:aura=true
+    B:bcadditions=true
+    S:colour=0xb39cca
+    D:energy=1.0
+    B:eng_toolbox=true
+    B:exnihilo=true
+    S:extra=Draconium
     B:factorization=true
     B:ganysnether=true
     B:modularsystems=true
@@ -738,20 +814,30 @@ Gallium {
 
 Gold {
     B:"Disable All"=false
+    B:Eln=true
     B:EnderIO=true
     B:HydCraft=true
     B:IC2=true
+    B:ImmersiveEngineering=true
     S:"In game name"=Gold
+    B:Magneticraft=true
+    B:Mariculture=true
     B:Mekanism=true
     B:NetherOres=true
     B:Railcraft=true
+    B:RotaryCraft=true
+    B:Steamcraft=true
     B:TConstruct=true
     B:Thaumcraft=true
     B:ThermalExpansion=true
     B:UltraTech=true
     B:appliedenergistics2=true
+    B:aura=true
+    B:bcadditions=true
     S:colour=0xb4a62c
     D:energy=1.0
+    B:eng_toolbox=true
+    B:exnihilo=true
     S:extra=Gold
     B:factorization=true
     B:ganysnether=true
@@ -863,20 +949,30 @@ Iridium {
 
 Iron {
     B:"Disable All"=false
+    B:Eln=true
     B:EnderIO=true
     B:HydCraft=true
     B:IC2=true
+    B:ImmersiveEngineering=true
     S:"In game name"=Iron
+    B:Magneticraft=true
+    B:Mariculture=true
     B:Mekanism=true
     B:NetherOres=true
     B:Railcraft=true
+    B:RotaryCraft=true
+    B:Steamcraft=true
     B:TConstruct=true
     B:Thaumcraft=true
     B:ThermalExpansion=true
     B:UltraTech=true
     B:appliedenergistics2=true
+    B:aura=true
+    B:bcadditions=true
     S:colour=0x878787
     D:energy=1.0
+    B:eng_toolbox=true
+    B:exnihilo=true
     S:extra=Nickel
     B:factorization=true
     B:ganysnether=true
@@ -913,20 +1009,30 @@ Lanthanum {
 
 Lead {
     B:"Disable All"=false
+    B:Eln=true
     B:EnderIO=true
     B:HydCraft=true
     B:IC2=true
+    B:ImmersiveEngineering=true
     S:"In game name"=Lead
+    B:Magneticraft=true
+    B:Mariculture=true
     B:Mekanism=true
     B:NetherOres=true
     B:Railcraft=true
+    B:RotaryCraft=true
+    B:Steamcraft=true
     B:TConstruct=true
     B:Thaumcraft=true
     B:ThermalExpansion=true
     B:UltraTech=true
     B:appliedenergistics2=true
+    B:aura=true
+    B:bcadditions=true
     S:colour=0x696373
     D:energy=1.0
+    B:eng_toolbox=true
+    B:exnihilo=true
     S:extra=Silver
     B:factorization=true
     B:ganysnether=true
@@ -1063,20 +1169,30 @@ Midasium {
 
 Mithril {
     B:"Disable All"=false
+    B:Eln=true
     B:EnderIO=true
     B:HydCraft=true
     B:IC2=true
+    B:ImmersiveEngineering=true
     S:"In game name"=Mithril
+    B:Magneticraft=true
+    B:Mariculture=true
     B:Mekanism=true
     B:NetherOres=true
     B:Railcraft=true
+    B:RotaryCraft=true
+    B:Steamcraft=true
     B:TConstruct=true
     B:Thaumcraft=true
     B:ThermalExpansion=true
     B:UltraTech=true
     B:appliedenergistics2=true
+    B:aura=true
+    B:bcadditions=true
     S:colour=0xd2dcca
     D:energy=1.0
+    B:eng_toolbox=true
+    B:exnihilo=true
     S:extra=Mithril
     B:factorization=true
     B:ganysnether=true
@@ -1238,20 +1354,30 @@ Neutronium {
 
 Nickel {
     B:"Disable All"=false
+    B:Eln=true
     B:EnderIO=true
     B:HydCraft=true
     B:IC2=true
+    B:ImmersiveEngineering=true
     S:"In game name"=Nickel
+    B:Magneticraft=true
+    B:Mariculture=true
     B:Mekanism=true
     B:NetherOres=true
     B:Railcraft=true
+    B:RotaryCraft=true
+    B:Steamcraft=true
     B:TConstruct=true
     B:Thaumcraft=true
     B:ThermalExpansion=true
     B:UltraTech=true
     B:appliedenergistics2=true
+    B:aura=true
+    B:bcadditions=true
     S:colour=0xc1c0cd
     D:energy=1.0
+    B:eng_toolbox=true
+    B:exnihilo=true
     S:extra=Platinum
     B:factorization=true
     B:ganysnether=true
@@ -1288,20 +1414,30 @@ Niobium {
 
 Osmium {
     B:"Disable All"=false
+    B:Eln=true
     B:EnderIO=true
     B:HydCraft=true
     B:IC2=true
+    B:ImmersiveEngineering=true
     S:"In game name"=Osmium
+    B:Magneticraft=true
+    B:Mariculture=true
     B:Mekanism=true
     B:NetherOres=true
     B:Railcraft=true
+    B:RotaryCraft=true
+    B:Steamcraft=true
     B:TConstruct=true
     B:Thaumcraft=true
     B:ThermalExpansion=true
     B:UltraTech=true
     B:appliedenergistics2=true
+    B:aura=true
+    B:bcadditions=true
     S:colour=0x3232ff
     D:energy=2.0
+    B:eng_toolbox=true
+    B:exnihilo=true
     S:extra=Osmium
     B:factorization=true
     B:ganysnether=true
@@ -1363,20 +1499,30 @@ PigIron {
 
 Platinum {
     B:"Disable All"=false
+    B:Eln=true
     B:EnderIO=true
     B:HydCraft=true
     B:IC2=true
+    B:ImmersiveEngineering=true
     S:"In game name"=Platinum
+    B:Magneticraft=true
+    B:Mariculture=true
     B:Mekanism=true
     B:NetherOres=true
     B:Railcraft=true
+    B:RotaryCraft=true
+    B:Steamcraft=true
     B:TConstruct=true
     B:Thaumcraft=true
     B:ThermalExpansion=true
     B:UltraTech=true
     B:appliedenergistics2=true
+    B:aura=true
+    B:bcadditions=true
     S:colour=0xd1e3d8
     D:energy=1.0
+    B:eng_toolbox=true
+    B:exnihilo=true
     S:extra=Platinum
     B:factorization=true
     B:ganysnether=true
@@ -1487,17 +1633,27 @@ Promethium {
 
 
 Recipes {
+    B:Eln=true
     B:EnderIO=true
     B:HydCraft=true
     B:IC2=true
+    B:ImmersiveEngineering=true
+    B:Magneticraft=true
+    B:Mariculture=true
     B:Mekanism=true
     B:NetherOres=true
     B:Railcraft=true
+    B:RotaryCraft=true
+    B:Steamcraft=true
     B:TConstruct=true
     B:Thaumcraft=true
     B:ThermalExpansion=true
     B:UltraTech=true
     B:appliedenergistics2=true
+    B:aura=true
+    B:bcadditions=true
+    B:eng_toolbox=true
+    B:exnihilo=true
     B:factorization=true
     B:ganysnether=true
     B:modularsystems=true
@@ -1633,20 +1789,30 @@ Silicon {
 
 Silver {
     B:"Disable All"=false
+    B:Eln=true
     B:EnderIO=true
     B:HydCraft=true
     B:IC2=true
+    B:ImmersiveEngineering=true
     S:"In game name"=Silver
+    B:Magneticraft=true
+    B:Mariculture=true
     B:Mekanism=true
     B:NetherOres=true
     B:Railcraft=true
+    B:RotaryCraft=true
+    B:Steamcraft=true
     B:TConstruct=true
     B:Thaumcraft=true
     B:ThermalExpansion=true
     B:UltraTech=true
     B:appliedenergistics2=true
+    B:aura=true
+    B:bcadditions=true
     S:colour=0xb3b9c5
     D:energy=1.0
+    B:eng_toolbox=true
+    B:exnihilo=true
     S:extra=Lead
     B:factorization=true
     B:ganysnether=true
@@ -1783,20 +1949,30 @@ Thulium {
 
 Tin {
     B:"Disable All"=false
+    B:Eln=true
     B:EnderIO=true
     B:HydCraft=true
     B:IC2=true
+    B:ImmersiveEngineering=true
     S:"In game name"=Tin
+    B:Magneticraft=true
+    B:Mariculture=true
     B:Mekanism=true
     B:NetherOres=true
     B:Railcraft=true
+    B:RotaryCraft=true
+    B:Steamcraft=true
     B:TConstruct=true
     B:Thaumcraft=true
     B:ThermalExpansion=true
     B:UltraTech=true
     B:appliedenergistics2=true
+    B:aura=true
+    B:bcadditions=true
     S:colour=0xbbc5ca
     D:energy=1.0
+    B:eng_toolbox=true
+    B:exnihilo=true
     S:extra=Iron
     B:factorization=true
     B:ganysnether=true
@@ -1858,20 +2034,30 @@ Tungsten {
 
 Uranium {
     B:"Disable All"=false
+    B:Eln=true
     B:EnderIO=true
     B:HydCraft=true
     B:IC2=true
+    B:ImmersiveEngineering=true
     S:"In game name"=Uranium
+    B:Magneticraft=true
+    B:Mariculture=true
     B:Mekanism=true
     B:NetherOres=true
     B:Railcraft=true
+    B:RotaryCraft=true
+    B:Steamcraft=true
     B:TConstruct=true
     B:Thaumcraft=true
     B:ThermalExpansion=true
     B:UltraTech=true
     B:appliedenergistics2=true
+    B:aura=true
+    B:bcadditions=true
     S:colour=0x3fbd37
     D:energy=1.0
+    B:eng_toolbox=true
+    B:exnihilo=true
     S:extra=Uranium
     B:factorization=true
     B:ganysnether=true
