--- a/config/AWWayofTime.cfg
+++ b/config/AWWayofTime.cfg
@@ -68,6 +68,180 @@ clientsettings {
 }
 
 
+##########################################################################################################
+# lp costs
+#--------------------------------------------------------------------------------------------------------#
+# For rituals, the first number indicates the activation cost while the second indicates the refresh cost
+##########################################################################################################
+
+"lp costs" {
+    I:"Air Sigil"=50
+    I:"Aura of Expulsion" <
+        1000000
+        1000
+     >
+    I:"Ballad of Alchemy" <
+        20000
+        10
+     >
+    I:"Blood of the New Moon" <
+        10000
+        0
+     >
+    I:"Call of the Zephyr" <
+        25000
+        5
+     >
+    I:"Convocation of the Damned" <
+        15000000
+        0
+     >
+    I:"Cry of the Eternal Soul" <
+        2000000
+        0
+     >
+    I:"Dome of Suppression" <
+        10000
+        2
+     >
+    I:"Duet of the Fused Souls" <
+        15000000
+        5000
+     >
+    I:"Focus of the Ellipsoid" <
+        25000
+        0
+     >
+    I:"Gaia's Transformation" <
+        1000000
+        0
+     >
+    I:"Harvest Goddess Sigil"=500
+    I:"Interdiction Ritual" <
+        1000
+        1
+     >
+    I:"Lava Sigil"=1000
+    I:"Mark of the Falling Tower" <
+        1000000
+        0
+     >
+    I:"Orchestra of the Phantom Hands" <
+        10000
+        0
+     >
+    I:"Reap of the Harvest Moon" <
+        20000
+        20
+     >
+    I:"Requiem of the Satiated Stomach" <
+        100000
+        100
+     >
+    I:"Reverence of the Condor" <
+        1000000
+        0
+     >
+    I:"Rhythm of the Beating Anvil" <
+        15000
+        10
+     >
+    I:"Ritual of Binding" <
+        5000
+        0
+     >
+    I:"Ritual of Containment" <
+        2000
+        1
+     >
+    I:"Ritual of Magnetism" <
+        5000
+        50
+     >
+    I:"Ritual of Regeneration" <
+        25000
+        20
+     >
+    I:"Ritual of Speed" <
+        1000
+        5
+     >
+    I:"Ritual of Unbinding" <
+        30000
+        0
+     >
+    I:"Ritual of the Crusher" <
+        2500
+        7
+     >
+    I:"Ritual of the Feathered Earth" <
+        100000
+        0
+     >
+    I:"Ritual of the Feathered Knife" <
+        50000
+        20
+     >
+    I:"Ritual of the Full Spring" <
+        500
+        25
+     >
+    I:"Ritual of the Green Grove" <
+        1000
+        20
+     >
+    I:"Ritual of the High Jump" <
+        1000
+        5
+     >
+    I:"Ritual of the Shepherd" <
+        10000
+        2
+     >
+    I:"Serenade of the Nether" <
+        10000
+        500
+     >
+    I:"Sigil of Compression"=200
+    I:"Sigil of Elemental Affinity"=200
+    I:"Sigil of Ender Severance"=200
+    I:"Sigil of Haste"=250
+    I:"Sigil of Magnetism"=50
+    I:"Sigil of Suppression"=400
+    I:"Sigil of the Blood Lamp"=10
+    I:"Sigil of the Fast Miner"=100
+    I:"Sigil of the Green Grove"=150
+    I:"Sigil of the Phantom Bridge"=100
+    I:"Sigil of the Whirlwind"=250
+    I:"Song of Evaporation" <
+        20000
+        0
+     >
+    I:"Symmetry of the Omega" <
+        15000000
+        0
+     >
+    I:"Veil of Evil" <
+        150000
+        20
+     >
+    I:"Void Sigil"=50
+    I:"Ward of Sacrosanctity" <
+        150000
+        15
+     >
+    I:"Water Sigil"=100
+    I:"Well of Suffering" <
+        50000
+        2
+     >
+    I:"[Weak Ritual] Night"=5000
+    I:"[Weak Ritual] Resistance"=5000
+    I:"[Weak Ritual] Thunderstorm"=5000
+    I:"[Weak Ritual] Zombie"=5000
+}
+
+
 meteor {
     S:diamondMeteor <
         oreDiamond
@@ -201,6 +375,14 @@ orecrushing {
     B:"Veil of Evil"=false
     B:"Ward of Sacrosanctity"=false
     B:"Well of Suffering"=false
+
+    weak {
+        B:Night=false
+        B:Resistance=false
+        B:Thunderstorm=false
+        B:Zombie=false
+    }
+
 }
 
 
@@ -247,11 +429,18 @@ wellofsufferingblacklist {
     B:BiomesOPlenty.Rosester=false
     B:BiomesOPlenty.Wasp=false
     B:Blaze=false
+    B:"Botania.botania:doppleganger"=false
+    B:"Botania.botania:pinkWither"=false
+    B:"Botania.botania:pixie"=false
     B:"BuildCraft|Core.bcRobot"=false
+    B:"BuildCraft|Robotics.bcRobot"=false
     B:CaveSpider=false
     B:Chicken=false
     B:Cow=false
     B:Creeper=false
+    B:DraconicEvolution.ChaosCrystal=false
+    B:DraconicEvolution.ChaosGuardian=false
+    B:DraconicEvolution.EnderDragon=false
     B:EnderDragon=false
     B:Enderman=false
     B:EntityHorse=false
@@ -266,6 +455,7 @@ wellofsufferingblacklist {
     B:GraveStone.GSZombieDog=false
     B:GraveStone.GSZombieSkullCrawler=false
     B:LavaSlime=false
+    B:Mekanism.BabySkeleton=false
     B:Mekanism.Robit=false
     B:MineFactoryReloaded.mfrEntityPinkSlime=false
     B:MushroomCow=false
@@ -314,6 +504,7 @@ wellofsufferingblacklist {
     B:Thaumcraft.ThaumSlime=false
     B:Thaumcraft.TravelingTrunk=false
     B:Thaumcraft.Wisp=false
+    B:ThaumicExploration.TaintacleMinion=false
     B:ThaumicHorizons.ChocolateCow=false
     B:ThaumicHorizons.ChromaticSheep=false
     B:ThaumicHorizons.Endersteed=false
@@ -324,8 +515,10 @@ wellofsufferingblacklist {
     B:ThaumicHorizons.GuardianPanther=false
     B:ThaumicHorizons.HorseSkeleton=false
     B:ThaumicHorizons.HorseZombie=false
+    B:ThaumicHorizons.LostSoul=false
     B:ThaumicHorizons.LunarWolf=false
     B:ThaumicHorizons.MeatSlime=false
+    B:ThaumicHorizons.MedSlime=false
     B:ThaumicHorizons.MercurialSlime=false
     B:ThaumicHorizons.NetherHound=false
     B:ThaumicHorizons.NightmareTH=false
@@ -333,7 +526,11 @@ wellofsufferingblacklist {
     B:ThaumicHorizons.ScholarChicken=false
     B:ThaumicHorizons.Seawolf=false
     B:ThaumicHorizons.SelfShearingSheep=false
+    B:ThaumicHorizons.Sheeder=false
     B:ThaumicHorizons.TaintEaterPig=false
+    B:ThaumicHorizons.VoltSlime=false
+    B:TwilightForest.Adherent=false
+    B:"TwilightForest.Apocalypse Cube"=false
     B:"TwilightForest.Armored Giant"=false
     B:"TwilightForest.Bighorn Sheep"=false
     B:"TwilightForest.Block&Chain Goblin"=false
@@ -345,6 +542,7 @@ wellofsufferingblacklist {
     B:"TwilightForest.Forest Raven"=false
     B:"TwilightForest.Forest Squirrel"=false
     B:"TwilightForest.Giant Miner"=false
+    B:"TwilightForest.Glacier Penguin"=false
     B:"TwilightForest.Hedge Spider"=false
     B:"TwilightForest.Helmet Crab"=false
     B:"TwilightForest.Hostile Wolf"=false
@@ -397,6 +595,7 @@ wellofsufferingblacklist {
     B:WitherBoss=false
     B:Wolf=false
     B:Zombie=false
+    B:chisel.snowman=false
     B:witchery.attackbat=false
     B:witchery.babayaga=false
     B:witchery.banshee=false
