--- a/config/AppliedEnergistics2/AppliedEnergistics2.cfg
+++ b/config/AppliedEnergistics2/AppliedEnergistics2.cfg
@@ -16,7 +16,7 @@ battery {
 
 
 client {
-    # Possible Values: AE, MJ, EU, WA, RF, MK
+    # Possible Values: AE, EU, WA, RF, MK
     S:PowerUnit=AE
 
     # Possible Values: AUTOSEARCH, MANUAL_SEARCH, NEI_AUTOSEARCH, NEI_MANUAL_SEARCH
@@ -65,6 +65,7 @@ client {
 
     # Controls buttons on Priority Screen : Capped at 9999
     I:priorityAmtButton4=1000
+    B:useColoredCraftingStatus=true
     B:useTerminalUseLargeFont=false
 }
 
@@ -139,6 +140,7 @@ features {
         B:CraftingTerminal=true
         B:ExportBus=true
         B:FormationPlane=true
+        B:IdentityAnnihilationPlane=true
         B:ImportBus=true
         B:LevelEmitter=true
         B:P2PTunnel=true
@@ -174,6 +176,8 @@ features {
         B:P2PTunnelLiquids=true
         B:P2PTunnelME=true
         B:P2PTunnelMJ=true
+        B:P2PTunnelOpenComputers=true
+        B:P2PTunnelPressure=true
         B:P2PTunnelRF=true
         B:P2PTunnelRedstone=true
     }
@@ -195,6 +199,7 @@ features {
         B:Achievements=true
         B:CraftingLog=false
         B:Creative=true
+        B:DebugLogging=false
         B:GrinderLogging=false
         B:IntegrationLogging=false
         B:LightDetector=true
@@ -208,6 +213,11 @@ features {
 
     crafting {
         B:CustomRecipes=false
+        B:EnableDisassemblyCrafting=true
+        B:EnableFacadeCrafting=true
+        B:InWorldFluix=true
+        B:InWorldPurification=true
+        B:InWorldSingularity=true
         B:InterfaceTerminal=true
         B:enableDisassemblyCrafting=true
         B:enableFacadeCrafting=true
@@ -268,6 +278,9 @@ modintegration {
     S:BuildCraft=AUTO
     S:BuildCraft5Power=AUTO
     S:BuildCraft6Power=AUTO
+    S:BuildCraftBuilders=AUTO
+    S:BuildCraftCore=AUTO
+    S:BuildCraftTransport=AUTO
     S:ColoredLightsCore=AUTO
     S:CraftGuide=AUTO
     S:DeepStorageUnit=AUTO
@@ -279,6 +292,8 @@ modintegration {
     S:Mekanism=AUTO
     S:MineFactoryReloaded=AUTO
     S:NotEnoughItems=AUTO
+    S:OpenComputers=AUTO
+    S:PneumaticCraft=AUTO
     S:Railcraft=AUTO
     S:RedstoneFluxPower-Items=AUTO
     S:RedstoneFluxPower-Tiles=AUTO
@@ -295,16 +310,9 @@ modintegration {
 ##########################################################################################################
 
 orecamouflage {
-    # OreDictionary Names: crystalCertusQuartz
     B:CertusQuartzCrystal=true
-
-    # OreDictionary Names: dustCertusQuartz
     B:CertusQuartzDust=true
-
-    # OreDictionary Names: dustEnder,dustEnderPearl
     B:EnderDust=true
-
-    # OreDictionary Names: dustWheat
     B:Flour=true
 
     # OreDictionary Names: dustGold
@@ -315,11 +323,7 @@ orecamouflage {
 
     # OreDictionary Names: nuggetIron
     B:IronNugget=true
-
-    # OreDictionary Names: dustNetherQuartz
     B:NetherQuartzDust=true
-
-    # OreDictionary Names: itemSilicon
     B:Silicon=true
 
     # OreDictionary Names: gearWood
@@ -372,6 +376,10 @@ tickrates {
     I:METunnel.min=5
     I:MJTunnel.max=20
     I:MJTunnel.min=1
+    I:OpenComputersTunnel.max=5
+    I:OpenComputersTunnel.min=1
+    I:PressureTunnel.max=120
+    I:PressureTunnel.min=1
     I:StorageBus.max=60
     I:StorageBus.min=5
     I:VibrationChamber.max=40
