--- a/config/DCsAppleMilk.cfg
+++ b/config/DCsAppleMilk.cfg
@@ -34,6 +34,10 @@
     # Change difficulty of the JawCrusher recipe.
     # 0:sweet 1:normal 2:bitter 3:hard
     I:"JawCrusher Dust Gen"=1
+
+    # Change difficulty of the JawCrusher recipe tier.
+    # 0:sweet 1:normal 2:bitter
+    I:"JawCrusher Recipe Difficulty"=1
 }
 
 
@@ -158,6 +162,9 @@ setting {
 
     # Set the update cycle tick of the device using the battery.
     I:"Battery Update Cycle"=4
+
+    # Set key number for rapid warp by charm effect. Default key is X(45).+ BR + If you don't want this effect, set 0.
+    I:"Charm Warp Key Number"=45
 
     # Set stack seize of filled cups. Please choose from the 1/3/8.
     I:"Cups Stack Size"=1
