--- a/config/GraveStoneMod/GraveStone.cfg
+++ b/config/GraveStoneMod/GraveStone.cfg
@@ -1,6 +1,7 @@
 # Configuration file
 
 compatibility {
+    B:EnableAntiqueAtlasDeathMarkers=true
     B:EnableArsMagicaSoulbound=true
     B:EnableEnderIOSoulbound=true
     B:EnableForestryBackpacks=true
@@ -43,6 +44,9 @@ general {
     B:RemoveEmptyGraves=false
     B:ReplaceHauntedChest=false
 
+    # List of coordinates in which graves generation must be disabled. "start_x,start_y,start_z,end_x,end_y,end_z;"
+    S:RestrictGraveGenerationInArea=
+
     # This value must be between 0 an 40(in this case all items will be stored)!
     I:SavedItemsCount=40
     B:ShowGravesRemovingMessages=true
@@ -65,6 +69,26 @@ general {
 
 potions {
     I:CursePotionEffectId=31
+}
+
+
+recipes {
+    B:CraftableNightStone=true
+    B:CraftableThunderStone=true
+    B:HardAltarRecipe=false
+}
+
+
+structures_catacombs {
+    I:CatacombsMaxRoomsCountAt1Level=60
+    I:CatacombsMaxRoomsCountAt2Level=120
+    I:CatacombsMaxRoomsCountAt3Level=180
+    I:CatacombsMaxRoomsCountAt4Level=320
+    I:CatacombsMinRoomsCountAt1Level=30
+    I:CatacombsMinRoomsCountAt2Level=60
+    I:CatacombsMinRoomsCountAt3Level=90
+    I:CatacombsMinRoomsCountAt4Level=160
+    B:GeneratePilesOfBones=true
 }
 
 
