--- a/config/Waila.cfg
+++ b/config/Waila.cfg
@@ -34,6 +34,7 @@ modules {
     B:bc.tankamount=true
     B:bc.tanktype=true
     B:enderstorage.colors=true
+    B:extrautilities.fluidamount=true
     B:facades.hidden=true
     B:general.showcrop=true
     B:general.showhp=true
@@ -43,6 +44,8 @@ modules {
     B:harvestability.effectivetool.sneakingonly=false
     B:harvestability.harvestlevel=true
     B:harvestability.harvestlevel.sneakingonly=false
+    B:harvestability.harvestlevelnum=false
+    B:harvestability.harvestlevelnum.sneakingonly=false
     B:harvestability.minimal=false
     B:harvestability.oresonly=false
     B:harvestability.shearability=true
@@ -53,9 +56,15 @@ modules {
     B:harvestability.unharvestableonly=false
     B:ic2.outputeu=true
     B:ic2.storage=true
+    B:oc.address=true
+    B:oc.componentName=true
+    B:oc.energy=true
     B:openblocks.fluidamount=true
+    B:pr.showdata=true
+    B:pr.showio=true
     B:railcraft.fluidamount=true
     B:thaumcraft.aspects=true
+    B:thermalexpansion.cache=true
     B:thermalexpansion.energycell=true
     B:thermalexpansion.energyhandler=true
     B:thermalexpansion.fluidamount=true
@@ -74,6 +83,7 @@ modules {
     B:wawla.beacon.showLevels=true
     B:wawla.beacon.showPrimary=true
     B:wawla.beacon.showSecondary=true
+    B:wawla.bed.sleepable=true
     B:wawla.dev.blockClass=false
     B:wawla.dev.blockID=false
     B:wawla.dev.blockNBT=false
@@ -87,10 +97,13 @@ modules {
     B:wawla.furnace.input=true
     B:wawla.furnace.output=true
     B:wawla.harvest.showHarvest=true
+    B:wawla.harvest.showProgress=true
     B:wawla.harvest.showTier=true
     B:wawla.harvest.showTool=true
     B:wawla.horse.showJump=true
     B:wawla.horse.showSpeed=true
+    B:wawla.info.showHardness=false
+    B:wawla.info.showResistance=false
     B:wawla.light.lightLevel=true
     B:wawla.light.monsterSpawn=true
     B:wawla.light.showDay=true
@@ -99,6 +112,9 @@ modules {
     B:wawla.pets.showOwner=true
     B:wawla.pets.sitting=true
     B:wawla.showEquipment=true
+    B:wawla.showHead=true
+    B:wawla.showMobArmor=true
+    B:wawla.showProfession=true
     B:wawla.showhead=true
     B:wawla.thaumcraft.deconAspect=true
     B:wawla.thaumcraft.jarAmount=true
@@ -109,6 +125,7 @@ modules {
     B:wawla.thaumcraft.pedestalItem=true
     B:wawla.thaumcraft.wandCharge=true
     B:wawla.thaumcraft.wandItem=true
+    B:wawla.tnt.fuse=true
     B:wawla.villagerZombie=true
 }
 
@@ -127,6 +144,7 @@ server_forcing {
     B:bc.tankamount=false
     B:bc.tanktype=false
     B:enderstorage.colors=false
+    B:extrautilities.fluidamount=false
     B:facades.hidden=false
     B:general.showcrop=false
     B:general.showhp=false
@@ -136,6 +154,8 @@ server_forcing {
     B:harvestability.effectivetool.sneakingonly=false
     B:harvestability.harvestlevel=false
     B:harvestability.harvestlevel.sneakingonly=false
+    B:harvestability.harvestlevelnum=false
+    B:harvestability.harvestlevelnum.sneakingonly=false
     B:harvestability.minimal=false
     B:harvestability.oresonly=false
     B:harvestability.shearability=false
@@ -146,9 +166,15 @@ server_forcing {
     B:harvestability.unharvestableonly=false
     B:ic2.outputeu=false
     B:ic2.storage=false
+    B:oc.address=false
+    B:oc.componentName=false
+    B:oc.energy=false
     B:openblocks.fluidamount=false
+    B:pr.showdata=false
+    B:pr.showio=false
     B:railcraft.fluidamount=false
     B:thaumcraft.aspects=false
+    B:thermalexpansion.cache=false
     B:thermalexpansion.energycell=false
     B:thermalexpansion.energyhandler=false
     B:thermalexpansion.fluidamount=false
@@ -167,6 +193,7 @@ server_forcing {
     B:wawla.beacon.showLevels=false
     B:wawla.beacon.showPrimary=false
     B:wawla.beacon.showSecondary=false
+    B:wawla.bed.sleepable=false
     B:wawla.dev.blockClass=false
     B:wawla.dev.blockID=false
     B:wawla.dev.blockNBT=false
@@ -180,10 +207,13 @@ server_forcing {
     B:wawla.furnace.input=false
     B:wawla.furnace.output=false
     B:wawla.harvest.showHarvest=false
+    B:wawla.harvest.showProgress=false
     B:wawla.harvest.showTier=false
     B:wawla.harvest.showTool=false
     B:wawla.horse.showJump=false
     B:wawla.horse.showSpeed=false
+    B:wawla.info.showHardness=false
+    B:wawla.info.showResistance=false
     B:wawla.light.lightLevel=false
     B:wawla.light.monsterSpawn=false
     B:wawla.light.showDay=false
@@ -192,6 +222,9 @@ server_forcing {
     B:wawla.pets.showOwner=false
     B:wawla.pets.sitting=false
     B:wawla.showEquipment=false
+    B:wawla.showHead=false
+    B:wawla.showMobArmor=false
+    B:wawla.showProfession=false
     B:wawla.showhead=false
     B:wawla.thaumcraft.deconAspect=false
     B:wawla.thaumcraft.jarAmount=false
@@ -202,6 +235,7 @@ server_forcing {
     B:wawla.thaumcraft.pedestalItem=false
     B:wawla.thaumcraft.wandCharge=false
     B:wawla.thaumcraft.wandItem=false
+    B:wawla.tnt.fuse=false
     B:wawla.villagerZombie=false
 }
 
