--- a/config/agricraft/Configuration.cfg
+++ b/config/agricraft/Configuration.cfg
@@ -46,6 +46,9 @@ compatibility {
     # set to false to disable compatibility for BiomesOPlenty [default: true]
     B:BiomesOPlenty=true
 
+    # set to false to disable compatibility for Botania [default: true]
+    B:Botania=true
+
     # set to false to disable compatibility for ComputerCraft [default: true]
     B:ComputerCraft=true
 
@@ -58,6 +61,9 @@ compatibility {
     # set to false to disable compatibility for GardenCore [default: true]
     B:GardenCore=true
 
+    # set to false to disable compatibility for ImmersiveEngineering [default: true]
+    B:ImmersiveEngineering=true
+
     # set to false to disable compatibility for McMultipart [default: true]
     B:McMultipart=true
 
@@ -67,16 +73,23 @@ compatibility {
     # set to false to disable compatibility for MineTweaker3 [default: true]
     B:MineTweaker3=true
 
+    # set to false to disable seed mutations in NEI [default: true]
+    B:"NEI Mutations"=true
+
+    # set to false to disable seed products in NEI [default: true]
+    B:"NEI Products"=true
+
     # set to false to disable compatibility for NotEnoughItems [default: true]
     B:NotEnoughItems=true
+
+    # set to false to disable compatibility for OpenComputers [default: true]
+    B:OpenComputers=true
 
     # set to false to disable compatibility for Thaumcraft [default: true]
     B:Thaumcraft=true
 
     # set to false to disable compatibility for Waila [default: true]
     B:Waila=true
-
-    # set to false to disable compatibility for bluepower [default: true]
     B:bluepower=true
 
     # set to false to disable compatibility for harvestcraft [default: true]
