--- a/config/progressiveautomation.cfg
+++ b/config/progressiveautomation.cfg
@@ -75,8 +75,14 @@ modcompatibility {
     # Enable support for AgriCraft [default: true]
     B:AgriCraft=true
 
+    # Enable support for ImmersiveEngineering [default: true]
+    B:ImmersiveEngineering=true
+
     # Enable support for RightClickPlants [default: true]
     B:RightClickPlants=true
+
+    # Enable support for Thaumcraft [default: true]
+    B:Thaumcraft=true
 
     # Enable support for harvestcraft [default: true]
     B:harvestcraft=true
