--- a/config/powercrystals/minefactoryreloaded/common.cfg
+++ b/config/powercrystals/minefactoryreloaded/common.cfg
@@ -332,10 +332,10 @@ RecipeSets {
     B:EnderIO=false
 
     # If true, MFR will register its Thermal Expansion-based recipes.
-    B:ThermalExpansion=false
+    B:ThermalExpansion=true
 
     # If true, MFR will register its standard (vanilla-item-only) recipes.
-    B:Vanilla=true
+    B:Vanilla=false
 }
 
 
